# voice2text

./: .env.example  .gitattributes  .gitignore  01setup.ps1  01setup.sh  02download-models.ps1  02download-models.sh  03start.ps1  03start.sh  04uninstall.ps1  04uninstall.sh  README.md  SPEC.md  pyproject.toml  start.bat
app/: __init__.py  __main__.py
app/api/: main.py  models.py
app/api/routes/: conversion.py  history.py  transcription.py  translation.py
app/cli/: main.py
app/cli/commands/: convert.py  file.py  history.py  hotwords.py  mic.py  serve.py  translate.py
app/core/: __init__.py  audio_processor.py  config.py  constants.py  history_manager.py  hot_words.py  opencc_engine.py  qwen3_asr.py  translation_service.py
app/gui/: __main__.py  app.py  main_window.py
app/gui/dialogs/: __init__.py  history_dialog.py  hotwords_dialog.py  model_dialog.py  settings_dialog.py  translation_dialog.py
app/gui/utils/: __init__.py  signal_bus.py  theme.py
app/gui/widgets/: __init__.py  audio_level_indicator.py  control_panel.py  status_bar.py  transcription_area.py
scripts/: run-api.ps1  run-api.sh  run-gui.ps1  run-gui.sh  setup.ps1  setup.sh
tests/api/: __init__.py
tests/core/: __init__.py  test_audio_processor.py  test_hot_words.py  test_opencc_engine.py
tests/gui/: __init__.py
